--- a/posts/solidjs-for-beginners.mdx
+++ b/posts/solidjs-for-beginners.mdx
@@ -15,7 +15,7 @@ tags: ['JavaScript', 'solidjs']
 ### This is a Markdown sub-heading
 We just used a `###` subheading in our blog post.
 
-<SyntaxHighlighter language="javascript" style={docco}>
+<SyntaxHighlighter language="javascript">
   {`
     const doStuff = () => {
       return console.log('hey')
