--- a/posts/variables-in-python.mdx
+++ b/posts/variables-in-python.mdx
@@ -16,7 +16,7 @@ tags: ['variables', 'python']
 ### This is a Markdown sub-heading
 We just used a `###` subheading in our blog post.
 
-<SyntaxHighlighter language="javascript" style={docco}>
+<SyntaxHighlighter language="javascript">
   {`
     const doStuff = () => {
       return console.log('hey')
